tests/ui/within-iframe-2.goml
// This test checks what happens if the selected element is not an iframe.

go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/basic.html"
within-iframe: ("#the-input", block {})
//~^ ERROR: selector `#the-input` is not an `<iframe>` but a `<input>`
